Make some adaptation on the test files